--- a/app/views/people/index.haml
+++ b/app/views/people/index.haml
@@ -6,24 +6,22 @@
       %th{class: 'ordinal'}
       %th{class: 'text-left person-name'} NAME
       %th{:'data-field' => 'up_by', :'data-sortable' => 'true', class: 'text-right weight'} UP BY
-    - previous_score = nil
-    - index = 0
-    - people_with_current_rank = 1
-    - @event.people.sort_by{|p| p.up_by || -1000 }.reverse.each do |person|
-      - up_by = person.try(:up_by)
-      - positive = up_by.to_f > 0 ? 'positive' : 'negative'
+    - previous_up_by = 0
+    - current_rank = 1
+    - @ranked_people.each_with_index do |person, index|
+      - up_by = person.up_by
+      - positive = up_by.to_d > 0 ? 'positive' : 'negative'
+      - current_rank = index + 1 if up_by.to_d != previous_up_by.to_d
+      - previous_up_by = up_by
       %tr
-        - percentage_change = person.try(:percentage_change)
-        - if up_by.to_f == previous_score.to_f
-          - people_with_current_rank += 1
-        - else
-          - index += people_with_current_rank
-          - people_with_current_rank = 1
-        - previous_score = up_by
-        %td{class: 'ordinal'}= up_by ? index : nil
+        %td{class: 'ordinal'}= current_rank
         %td{class: 'person-name'}= link_to(person.name.upcase, person_path(person))
-        - percent_text = up_by && percentage_change ? "(#{percentage_change.round(2)}%)" : ""
-        %td{class: "#{positive} text-right weight"}= "#{up_by.try(:round, 3)} #{percent_text}"
+        %td{class: "#{positive} text-right weight"}= "#{up_by.round(3)} #{person.percentage_change.round(2)}"
+    - @unranked_people.each do |person|
+      %tr
+        %td
+        %td{class: 'person-name'}= link_to(person.name.upcase, person_path(person))
+        %td
 
 %br
 %br
