--- a/app/views/people/new.haml
+++ b/app/views/people/new.haml
@@ -6,6 +6,10 @@
     %br
     = f.text_field :name, { class: "form-control" }
     %p
+    = f.label :league_name
+    %br
+    = f.text_field :league_name, { class: "form-control" }
+    %p
     = f.label :weight
     %br
     = f.text_field :weight, { autocomplete: :off, class: "form-control" }
