Add nested routes with events

--- a/app/views/checkins/new.haml
+++ b/app/views/checkins/new.haml
@@ -8,11 +8,11 @@
       = value
 %div
   .input-group
-    = form_for :checkin, url: checkins_path do |f|
+    = form_for :checkin, url: event_checkins_path(@event) do |f|
       - options = ['SELECT YOUR NAME'] + @people.map { |person| [person.name, person.id] }
       = f.select :person_id, options_for_select(options, disabled: ['-'*20]), class: 'input-block-level'
       %br
-      = link_to('Not Listed?', new_person_path, class: 'btn btn-default btn-block') unless ENV['QUIET_MODE']
+      = link_to('Not Listed?', new_event_person_path(@event), class: 'btn btn-default btn-block') unless ENV['QUIET_MODE']
       %p
       = f.label :weight
       %br
@@ -20,4 +20,4 @@
       = f.submit class: "btn btn-primary text-uppercase btn-block", value: 'SAVE >'
 
 %h3
-  %a= link_to('< Back', people_path, class: 'btn btn-default btn-block navbar navbar-fixed-bottom')
+  %a= link_to('< Back', event_people_path(@event), class: 'btn btn-default btn-block navbar navbar-fixed-bottom')
