--- a/app/views/people/show.haml
+++ b/app/views/people/show.haml
@@ -14,4 +14,4 @@
 %br
 %br
 %h3
-  %a= link_to('< Back', people_path, class: 'btn btn-default btn-block navbar navbar-fixed-bottom')
+  %a= link_to('< Back', event_people_path(@event, @person), class: 'btn btn-default btn-block navbar navbar-fixed-bottom')
