--- a/app/views/people/new.haml
+++ b/app/views/people/new.haml
@@ -1,6 +1,6 @@
 %h1 New Person
 .input-group
-  = form_for :person, url: people_path do |f|
+  = form_for :person, url: event_people_path do |f|
     %p
     = f.label :name
     %br
@@ -16,4 +16,4 @@
     %br
     = f.submit class: "btn btn-primary text-uppercase btn-block", value: 'SAVE >'
 %h3
-  %a= link_to('< Back', new_checkin_path, class: 'btn btn-default btn-block navbar navbar-fixed-bottom')
+  %a= link_to('< Back', new_event_checkin_path(@event), class: 'btn btn-default btn-block navbar navbar-fixed-bottom')
