Add league scoreboard

--- a/app/views/events/index.haml
+++ b/app/views/events/index.haml
@@ -8,7 +8,7 @@
       / TODO: add winner here
       %tr
         %td{class: 'ordinal'}= index
-        %td{class: "text-left weight"}=link_to(event.name, event_path(event.id))
+        %td{class: "text-left weight"}=link_to(event.name, event_people_path(event.id))
 
 %br
 %br
