--- a/app/views/events/index.haml
+++ b/app/views/events/index.haml
@@ -8,11 +8,15 @@
       / TODO: add winner here
       %tr
         %td{class: 'ordinal'}= index
-        %td{class: "text-left weight"}=link_to(event.name, event_people_path(event.id))
+        %td{class: "text-left weight"}=link_to(event.name, event_people_path(event))
 
 %br
 %br
 %br
 %br
 %br
-= link_to('CURRENT EVENT', event_people_path(Event.last))
+- if Event.any?
+  = link_to('CURRENT EVENT', event_people_path(Event.last))
+%br
+%br
+= link_to('CREATE NEW EVENT', new_event_path)
